# CryptoSage

./: .env.example  .gitignore  ARCHITECTURE.md  BUG_FIXES_AND_IMPROVEMENTS_SUMMARY.md  CLEANUP_SUMMARY.md  COMPLETION_REPORT.txt  COMPLETION_SUMMARY.md  DASHBOARD_GUIDE.md  DELIVERABLES.md  DEPLOYMENT_GUIDE.md  FINAL_SUMMARY.md  FUTURES_TRADING_FIX_SUMMARY.md  GETTING_STARTED.md  GITHUB_DEPLOYMENT.md  GITHUB_README.md  GITHUB_SETUP.md  IMPROVEMENTS_SUMMARY.md  INDEX.md  NEXT_STEPS.md  PROJECT_SUMMARY.md  PUSH_TO_GITHUB.md  QUICKSTART.md  QUICK_REFERENCE.md  QUICK_START.md  README.md  REAL_TIME_UPDATES_SUMMARY.md  RUN_GUIDE.md  SETUP.md  STARTUP_GUIDE.md  START_HERE.md  START_WITH_DASHBOARD.md  WEB_DASHBOARD_COMPLETION_REPORT.md  WEB_DASHBOARD_SETUP.md  WEB_DASHBOARD_SUMMARY.md  cleanup.bat  cleanup.py  cleanup.sh  main.py  pyproject.toml  run_all.py  (+4 more)
config/: config.yaml
examples/: 01_data_collection.py  02_feature_engineering.py  03_model_training.py  04_backtesting.py  05_risk_management.py
frontend/: README.md  index.html  server.py
frontend/css/: style.css
frontend/js/: app.js
src/: __init__.py
src/api/: __init__.py  server.py
src/backtesting/: __init__.py  backtest_engine.py  metrics.py
src/data/: __init__.py  binance_client.py  data_manager.py
src/execution/: __init__.py  order_executor.py
src/features/: __init__.py  feature_engineer.py
src/models/: __init__.py  base_model.py  improved_ensemble_model.py  long_term_model.py  short_term_model.py
src/monitoring/: __init__.py  metrics_collector.py
src/risk_management/: __init__.py  position_sizer.py  risk_manager.py
src/utils/: __init__.py  config.py  logger.py  time_utils.py
tests/unit/: test_risk_management.py  test_utils.py
